--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,166 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Recipe Search Engine</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
+  <style>
+    body {
+      background-color: #eef2f5;
+      font-family: 'Arial', sans-serif;
+    }
+
+    .container {
+      max-width: 700px;
+      margin-top: 50px;
+      background-color: #fff;
+      padding: 25px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
+
+    h2 {
+      color: #007bff;
+      font-weight: bold;
+    }
+
+    .btn-primary {
+      width: auto;
+      font-weight: bold;
+      background-color: #007bff;
+      border: none;
+    }
+
+    .btn-primary:hover {
+      background-color: #0056b3;
+    }
+
+    .loader {
+      display: none;
+      margin: 20px auto;
+      border: 8px solid #f3f3f3;
+      border-top: 8px solid #007bff;
+      border-radius: 50%;
+      width: 60px;
+      height: 60px;
+      animation: spin 1s linear infinite;
+    }
+
+    @keyframes spin {
+      0% {
+        transform: rotate(0deg);
+      }
+
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+    <h2 class="text-center mb-4"><i class="fas fa-heartbeat"></i> Recipe Search Engine</h2>
+
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+  </div>
+
+  <script type="text/babel">
+
+    const { useState } = React;
+
+    function RecipeSearch() {
+      const [query, setQuery] = useState("");
+      const [diet, setDiet] = useState("any");
+      const [recipes, setRecipes] = useState([]);
+      const [loading, setLoading] = useState(false);
+      const [error, setError] = useState("");
+
+      const handleInputChange = (e) => setQuery(e.target.value);
+      const handleDietChange = (e) => setDiet(e.target.value);
+
+      const handleSearch = async () => {
+        if (!query.trim()) return;
+        setLoading(true);
+        setError("");
+        try {
+          // For now just mock some recipes
+          const response = await new Promise((resolve) => setTimeout(() => resolve({
+            data: { recipes: [{ id: 1, title: 'Test Recipe', ingredients: ['ingredient1', 'ingredient2'] }] }
+          }), 1000));
+          setRecipes(response.data.recipes || []);
+        } catch (err) {
+          console.error(err);
+          setError("An error occurred while fetching recipes.");
+        } finally {
+          setLoading(false);
+        }
+      };
+
+      return (
+        <div>
+          <div className="mb-3">
+            <label htmlFor="query" className="form-label">
+              Search for a recipe:
+            </label>
+            <input
+              id="query"
+              type="text"
+              value={query}
+              onChange={handleInputChange}
+              className="form-control mb-2"
+              placeholder="Enter ingredients, etc..."
+            />
+            <label htmlFor="diet" className="form-label">
+              Dietary Restriction:
+            </label>
+            <select
+              id="diet"
+              value={diet}
+              onChange={handleDietChange}
+              className="form-select mb-3"
+            >
+              <option value="any">Any</option>
+              <option value="vegan">Vegan</option>
+              <option value="keto">Keto</option>
+              <option value="gluten-free">Gluten-Free</option>
+            </select>
+
+            <button onClick={handleSearch} className="btn btn-primary">
+              Search
+            </button>
+          </div>
+
+          {loading && <p>Loading recipes...</p>}
+          {error && <p className="text-danger">{error}</p>}
+
+          <ul className="list-group">
+            {recipes.map((recipe) => (
+              <li key={recipe.id} className="list-group-item">
+                <strong>{recipe.title}</strong>
+                <br />
+                {recipe.ingredients && (
+                  <em>Ingredients: {recipe.ingredients.join(", ")}</em>
+                )}
+              </li>
+            ))}
+          </ul>
+        </div>
+      );
+    }
+
+    ReactDOM.createRoot(document.getElementById('root')).render(<RecipeSearch />);
+  </script>
+
+</body>
+
 </html>
